--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Class Schedule Generator",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --experimental-modules --es-module-specifier-resolution=node ./src/tests/test-unit.js",
     "build": "webpack --config webpack.config.cjs",
     "live": "node live-server.cjs"
   },
@@ -13,13 +12,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "css-loader": "^6.2.0",
-    "mocha": "^9.1.3",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
     "live-server": "^1.2.1",
-    "csv-file-validator": "^1.13.1"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^4.10.0"
   }
 }
