--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "live-server": "^1.2.2",
     "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack-obfuscator": "^3.5.1"
   }
 }
